--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -73,10 +73,19 @@
                                 content_block__border-top">
 
 
-                    {% set query = queries.calendar_event %}
-                    {% set events_all = query.search_with_url_arguments(size=100) %}
+                    {% set active_filters = selected_filters_for_field('urlcal') %}
 
-                    {% include "calendar-event-filters.html" %}
+                    {% set active_date_filters =
+                       selected_filters_for_field('range_dtstart_gte') + 
+                       selected_filters_for_field('range_dtend_lte')
+                    %}
+
+                    {#{% set active_filters_total = active_filters|length + active_date_filters|length %}#}
+
+                    {% set query = queries.calendar_event %}
+                    {% set events_all = query.search_with_url_arguments(size=20) %}
+
+                    {% include "calendar-event-filters-form.html" %}
 
                     {% for years in events_all|groupby('dtstart.year')|reverse %}
                     {% for months in years.list|groupby('dtstart.month')|reverse %}
