Consolidated filter expandable.

--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -49,7 +49,11 @@
 
             <div class="content_main content__flush-bottom content__flush-top-on-small">
                 <section>
-                    {% include "post-filters.html" %}
+                    {{ post_macros.filters('Filter posts', query, posts,
+                        [ 'category',
+                          'tags',
+                          'author' ],
+                        'post-filters-form.html') }}
                     {% include "watchroom.html" %}
                     {% include "posts-paginated.html" %}
                 </section>
