--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -68,7 +68,7 @@
                     {% set query = queries.calendar_event %}
                     {% set events_all = query.search_with_url_arguments(size=20) %}
 
-                        {% include "calendar-event-filters.html" %}
+                        {{ post_macros.filters('Filter calendar', query, events_all, ['person'], 'calendar-event-filters-form.html') }}
 
                     {% for days in events_all|groupby('day')|reverse %}
                         <table class="u-w100pct content_block content_block__flush-top">
