--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -67,8 +67,9 @@
 
                     {% set query = queries.calendar_event %}
                     {% set events_all = query.search_with_url_arguments(size=20) %}
+                    {% set filters = ['calendar'] %}
 
-                        {{ post_macros.filters('Filter calendar', query, events_all, ['person'], 'calendar-event-filters-form.html') }}
+                        {{ post_macros.filters('Filter calendar', query, events_all, filters, 'calendar-event-filters-form.html') }}
 
                     {% for days in events_all|groupby('day')|reverse %}
                         <table class="u-w100pct content_block content_block__flush-top">
@@ -120,7 +121,7 @@
 
                     </div><!-- END calendar -->
 
-                    {{ post_macros.pagination(events_all, ['person']) }}
+                    {{ post_macros.pagination(events_all, filters) }}
 
                     <!-- <section class="content_block
                                 content_block__padded-top
