--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -160,17 +160,20 @@
                                 </h1>
                                 <ul class="list list__links">
                                     <li class="list_item">
-                                        <a href="http://www.consumerfinance.gov/foia/" class="list_link">
+                                        <a href="http://www.consumerfinance.gov/foia/"
+                                           class="list_link">
                                             Read more about FOIA
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a href="http://www.consumerfinance.gov/open/" class="list_link">
+                                        <a href="http://www.consumerfinance.gov/open/"
+                                           class="list_link">
                                             Open government
                                         </a>
                                     </li>
                                     <li class="list_item">
-                                        <a href="{{ path }}history/" class="list_link">
+                                        <a href="{{ path }}history/"
+                                           class="list_link">
                                             About our history
                                         </a>
                                     </li>
