--- a/newsroom/index.html
+++ b/newsroom/index.html
@@ -49,9 +49,8 @@
 
             <div class="content_main content__flush-bottom content__flush-top-on-small">
                 <section>
-                    {{ post_macros.filters('Filter posts', query, posts,
-                        ['category', 'tags', 'author', 'range_date_gte', 'range_date_lte'],
-                        'post-filters-form.html') }}
+                    {{ post_macros.filters('Filter posts', query, posts, 'newsroom',
+                       ['category', 'tags', 'author', 'range_date']) }}
                     {% include "watchroom.html" %}
                     {% include "posts-paginated.html" %}
                 </section>
