--- a/index.html
+++ b/index.html
@@ -11,6 +11,28 @@
     Our vision is a consumer finance marketplace that works for American consumers, responsible providers, and the economy as a whole.
 {%- endblock %}
 
+{% block css -%}
+<style>
+    /* These heights control the height of the "bar charts" in the non-SVG fallback */
+    #consumer-guides {
+        height: 100%;
+        background: #2CB34A;
+    }
+    #submit-a-complaint {
+        height: 20%;
+    }
+    #data-and-research {
+        height: 90%;
+    }
+    #for-industry {
+        height: 65%;
+    }
+    #about {
+        height: 10%;
+    }
+</style>
+{%- endblock %}
+
 {% block content %}
 
     <main class="content" id="main" role="main">
@@ -30,12 +52,57 @@
         <div class="wrapper content_wrapper">
             <section class="content_main">
                 <h2 class="content_title__extra-large">What we&rsquo;re working on</h2>
-                <p>
+                <p class="short-desc">
                     You deserve a website that works for you.
                     We&rsquo;re redesigning and reorganizing, section by section,
                     so you can find the information you need quickly and easily, on any device.
-                    These bars tell you how much of each section we've published in the new format.
+                    These charts tell you how much of each section we've published in the new format.
                 </p>
+
+                <div class="progress-charts">
+                    <div class="progress-charts_container">
+                        <canvas class="progress-charts_chart" id="canvas0">
+                            <div class="chart-bg">
+                                <div id="consumer-guides" class="chart-pct">100%</div>
+                            </div>
+                        </canvas>
+                        <h5 class="chart-name">Consumer Guides</h5>
+                        
+                    </div>
+                    <div class="progress-charts_container">
+                        <canvas class="progress-charts_chart" id="canvas1">
+                            <div class="chart-bg">
+                                <div id="submit-a-complaint" class="chart-pct">20%</div>
+                            </div>
+                        </canvas>
+                        <h5 class="chart-name">Submit a Complaint</h5>
+                    </div>
+                    <div class="progress-charts_container">
+                        <canvas class="progress-charts_chart" id="canvas2">
+                            <div class="chart-bg">
+                                <div id="data-and-research" class="chart-pct">90%</div>
+                            </div>
+                        </canvas>
+                        <h5 class="chart-name">Data & Research</h5>
+                    </div>
+                    <div class="progress-charts_container">
+                        <canvas class="progress-charts_chart" id="canvas3">
+                            <div class="chart-bg">
+                                <div id="for-industry" class="chart-pct">65%</div>
+                            </div>
+                        </canvas>
+                        <h5 class="chart-name">For Industry</h5>
+                    </div>
+                    <div class="progress-charts_container">
+                        <canvas class="progress-charts_chart" id="canvas4">
+                            <div class="chart-bg">
+                                <div id="about" class="chart-pct">10%</div>
+                            </div>
+                        </canvas>
+                        <h5 class="chart-name">About</h5>
+                    </div>
+                </div>
+
                 <div class="content_block
                             content_block__padded-top
                             content_block__border-top
@@ -43,7 +110,7 @@
                     <div class="content-l content-l__large-gutters">
                         <section class="content-l_col content-l_col-1-2">
                             <h3 class="content_title__medium">Why are we redesigning in&nbsp;beta?</h3>
-                            <p>
+                            <p class="short_desc">
                                 A beta release gives both users and developers a sense of
                                 new features and capabilities.
                                 It helps us identify what's working and what's not.
@@ -65,7 +132,7 @@
                         </section>
                         <section class="content-l_col content-l_col-1-2 content-l_col__before-divider">
                             <h3 class="content_title__medium">Open government, open code</h3>
-                            <p>
+                            <p class="short_desc">
                                 The new consumerfinance.gov is an open source project,
                                 but it's not our only one.
                                 All the software we build is open source by default.
@@ -96,12 +163,196 @@
 {% endblock content %}
 
 {% block javascript %}
+<script src="/static/vendor/requestNextAnimationFrame/requestNextAnimationFrame.js"></script>
+
 <script>
-    $(document).ready(function() {
-        // Hide Sheer links if this is being viewed on GitHub pages.
-        if ( window.location.host.indexOf('.github.io') >= 0 ) {
-            $('.demo-sheer-link').hide();
-        }
+    /* multiplier determines how pixel dense the canvas should be.
+       This way canvas can look good even on retina displays */ 
+    var multiplier = 2;
+    /* boolean to end the animation loop so it's not just running continuously int he background */
+    var animationComplete = false;
+    /* this variable keeps track of time by counting the number of frames drawn */
+    var iterationCount = 0;
+
+    var radius = ($(".progress-charts_container").width() * multiplier) / 2;
+    var arcStart = 270;
+    var center = { 
+      x: radius,
+      y: radius
+    };
+
+
+    /* objects to store each charts values */
+    var charts = [
+      {
+        name: "consumer guides",
+        done: parseInt( $("#consumer-guides").text() ) / 100,
+        value: 0
+      },
+      {
+        name: "submit a complaint",
+        done: parseInt( $("#submit-a-complaint").text() ) / 100,
+        value: 0
+      },
+      {
+        name: "data and research",
+        done: parseInt( $("#data-and-research").text() ) / 100,
+        value: 0
+      },
+      {
+        name: "for industry",
+        done: parseInt( $("#for-industry").text() ) / 100,
+        value: 0
+      },
+      {
+        name: "about",
+        done: parseInt( $("#about").text() ) / 100,
+        value: 0
+      }
+    ];
+    /* setup each canvas element */
+    $( "canvas" ).each(function( i ) {
+        var canvas =  document.querySelector('#canvas' + i),
+                      ctx = canvas.getContext('2d');
+                      ctx.canvas.width  = $(".progress-charts_container").width() * multiplier;
+                      ctx.canvas.height = ctx.canvas.width;
+                      ctx.canvas.style.width  = "100px";
+                      ctx.canvas.style.height = "100px";
     });
+
+    //Run everything on load (or switch to when in view)
+    $( document ).ready(function() {
+      if (!animationComplete) {
+        animate();
+      };
+    });
+
+    function animate() {
+      /* variqable to keep track of when all charts are finished animating */
+      var completeCount = 0;
+      $( "canvas" ).each(function( i ) {
+        //snag the context
+        var ctx = $("#canvas" + i)[0].getContext('2d');
+        if (charts[i].value < charts[i].done) {
+          // ease the value (90 being how long it should take)
+          // we're animating at 60fps so 90 is 1.5 seconds
+          charts[i].value = easeInOutQuint(iterationCount,0,charts[i].done,90);
+        } else {
+          completeCount++;
+        }
+        //send values to be drawn
+        drawGraph(ctx, charts[i].value);
+      });
+      // each loop through is a animation frame, so count up the frames
+      iterationCount++;
+      // if charts aren't finished animating loop again
+      if (completeCount < 5) {
+        window.requestNextAnimationFrame(animate);
+      } else {
+        animationComplete = true;
+      };
+    };
+
+
+    function drawGraph(context, value) {
+      context.clearRect(0,0,context.canvas.width,context.canvas.height);
+      //inner grey
+      context.beginPath();
+      context.arc(center.x,center.y, radius - (4 * multiplier),0,2*Math.PI);
+      context.fillStyle = '#E3E4E5';
+      context.fill();  
+
+      if (value < 1) {
+        //decimal 0.0 - 1 for percentage
+        var pct = arcStart + (value * 360);
+        //fill percentage arc
+        context.beginPath();
+        context.moveTo(center.x, center.y);
+        context.arc(center.x, center.y, radius, 
+                    getRadians(arcStart), getRadians(pct), false);
+        context.closePath();
+        context.fillStyle = '#FF931B';
+        context.fill();  
+        //center circle
+        context.beginPath();
+        context.arc(center.x,center.y,radius/1.85,0,2*Math.PI);
+        context.fillStyle = '#fff';
+        context.fill();
+      } else {
+
+        //switch to green
+
+        //decimal 0.0 - 1 for percentage
+        var pct = arcStart + (value * 360);
+        //fill percentage arc
+        context.beginPath();
+        context.moveTo(center.x, center.y);
+        context.arc(center.x, center.y, radius, 
+                    getRadians(arcStart), getRadians(pct), false);
+        context.closePath();
+        context.fillStyle = '#2CB34A';
+        context.fill();  
+        //center circle
+        context.beginPath();
+        context.arc(center.x,center.y,radius/1.85,0,2*Math.PI);
+        context.fillStyle = '#ADDC91';
+        context.fill();
+        //check mark
+        var unit = (radius - (4 * multiplier))/5;
+        context.beginPath();
+        context.moveTo(center.x - unit, center.y);
+        context.lineTo(center.x - unit/2, center.y + unit);
+        context.lineWidth = 6 * (radius/100) * multiplier;
+        context.strokeStyle = '#fff';
+        context.lineCap = 'round';
+        context.stroke();
+        context.beginPath();
+        context.moveTo(center.x - unit/2, center.y + unit);
+        context.lineTo(center.x + unit, center.y - unit);
+        context.stroke();
+      }
+    }
+
+    // ------------------------------------------------
+    // Events
+    // ------------------------------------------------
+    $( window ).resize(function() {
+
+      //reset after resize (just in case)
+      waitForFinalEvent(function(){
+
+      });
+    });
+
+
+
+    // ------------------------------------------------
+    // utilitits
+    // ------------------------------------------------
+
+    function getRadians(degrees) {
+      return degrees*Math.PI/180;
+    }
+
+    function easeInOutQuint(currentIteration, startValue, changeInValue, totalIterations) {
+      if ((currentIteration /= totalIterations / 2) < 1) {
+        return changeInValue / 2 * Math.pow(currentIteration, 5) + startValue;
+      }
+      return changeInValue / 2 * (Math.pow(currentIteration - 2, 5) + 2) + startValue;
+    }
+
+    //wait for timer
+    var waitForFinalEvent = (function () {
+      var timers = {};
+      return function (callback, ms, uniqueId) {
+        if (!uniqueId) {
+          uniqueId = "Don't call this twice without a uniqueId";
+        }
+        if (timers[uniqueId]) {
+          clearTimeout (timers[uniqueId]);
+        }
+        timers[uniqueId] = setTimeout(callback, ms);
+      };
+    })();
 </script>
 {% endblock %}
