--- a/the-bureau/bureau-structure/role-macro.html
+++ b/the-bureau/bureau-structure/role-macro.html
@@ -1,15 +1,15 @@
 {% macro display_role(role) -%}
-    <div class="role">
-        <div class="role_office u-mb0">
+    <span class="role">
+        <span class="role_office u-mb0">
             {{role.title|safe}}
-        </div>
-        <div class="role_name">
+        </span>
+        <span class="role_name">
             {{role.name}}
-        </div>
+        </span>
         {% for title in role.titles %}
-            <div class="role_title">
+            <span class="role_title">
                 {{title}}
-            </div>
+            </span>
         {% endfor %}
-    </div>
+    </span>
 {%- endmacro %}
