Updates use of small tag in leadership cal.

--- a/the-bureau/leadership-calendar/index.html
+++ b/the-bureau/leadership-calendar/index.html
@@ -107,7 +107,7 @@
                                         {{ event.summary }}
                                     {% if event.location %}
                                         <br>
-                                        <small>{{ event.location }}</small>
+                                        <span class="u-small-text">{{ event.location }}</span>
                                     {% endif %}
                                     {% if event.description %}
                                         <br>
