--- a/index.html
+++ b/index.html
@@ -166,23 +166,24 @@
 <script src="/static/vendor/requestNextAnimationFrame/requestNextAnimationFrame.js"></script>
 
 <script>
-    /* multiplier determines how pixel dense the canvas should be.
-       This way canvas can look good even on retina displays */ 
+    // Multiplier determines how pixel dense the canvas should be.
+    // This way canvas can look good even on retina displays.
     var multiplier = 2;
-    /* boolean to end the animation loop so it's not just running continuously int he background */
+
+    // Boolean to end the animation loop so it's not just running continuously in the background.
     var animationComplete = false;
-    /* this variable keeps track of time by counting the number of frames drawn */
+
+    // This variable keeps track of time by counting the number of frames drawn.
     var iterationCount = 0;
 
-    var radius = ($(".progress-charts_container").width() * multiplier) / 2;
-    var arcStart = 270;
-    var center = { 
-      x: radius,
-      y: radius
-    };
+    var radius = ($(".progress-charts_container").width() * multiplier) / 2,
+        arcStart = 270,
+        center = {
+          x: radius,
+          y: radius
+        };
 
-
-    /* objects to store each charts values */
+    // Array of objects to store each chart's values.
     var charts = [
       {
         name: "consumer guides",
@@ -210,7 +211,8 @@
         value: 0
       }
     ];
-    /* setup each canvas element */
+
+    // Set up each canvas element.
     $( ".progress-charts_chart" ).each(function() {
       var ctx = $(this)[0].getContext('2d');
       ctx.canvas.width = $(".progress-charts_container").width() * multiplier;
@@ -219,109 +221,101 @@
       ctx.canvas.style.height = "100px";
     });
 
-    //Run everything on load (or switch to when in view)
+    // Run everything on load (or switch to when in view).
     $( document ).ready(function() {
       if (!animationComplete) {
         animate();
-      };
+      }
     });
 
     function animate() {
-      /* variqable to keep track of when all charts are finished animating */
+      // Variable to keep track of when all charts are finished animating.
       var completeCount = 0;
       $( ".progress-charts_chart" ).each(function(i) {
-        //snag the context
+        // snag the context
         var ctx = $(this)[0].getContext('2d');
         if (charts[i].value < charts[i].done) {
           // ease the value (90 being how long it should take)
           // we're animating at 60fps so 90 is 1.5 seconds
-          charts[i].value = easeInOutQuint(iterationCount,0,charts[i].done,90);
+          charts[i].value = easeInOutQuint(iterationCount, 0, charts[i].done, 90);
         } else {
           completeCount++;
         }
-        //send values to be drawn
+        // send values to be drawn
         drawGraph(ctx, charts[i].value);
       });
       // each loop through is a animation frame, so count up the frames
       iterationCount++;
-      // if charts aren't finished animating loop again
+      // if charts aren't finished animating, loop again
       if (completeCount < 5) {
         window.requestNextAnimationFrame(animate);
       } else {
         animationComplete = true;
-      };
+      }
     };
 
-
     function drawGraph(context, value) {
-      context.clearRect(0,0,context.canvas.width,context.canvas.height);
-      //inner grey
+      context.clearRect(0, 0, context.canvas.width, context.canvas.height);
+      // inner grey
       context.beginPath();
-      context.arc(center.x,center.y, radius - (4 * multiplier),0,2*Math.PI);
+      context.arc(center.x, center.y, radius - (4 * multiplier), 0, 2 * Math.PI);
       context.fillStyle = '#E3E4E5';
-      context.fill();  
+      context.fill();
 
       if (value < 1) {
-        //decimal 0.0 - 1 for percentage
+        // decimal 0.0 - 1 for percentage
         var pct = arcStart + (value * 360);
-        //fill percentage arc
+        // fill percentage arc
         context.beginPath();
         context.moveTo(center.x, center.y);
-        context.arc(center.x, center.y, radius, 
-                    getRadians(arcStart), getRadians(pct), false);
+        context.arc(center.x, center.y, radius, getRadians(arcStart), getRadians(pct), false);
         context.closePath();
         context.fillStyle = '#FF931B';
-        context.fill();  
-        //center circle
-        context.beginPath();
-        context.arc(center.x,center.y,radius/1.85,0,2*Math.PI);
-        context.fillStyle = '#fff';
         context.fill();
-      } else {
-
-        //switch to green
-
-        //decimal 0.0 - 1 for percentage
+        // center circle
+        context.beginPath();
+        context.arc(center.x, center.y, radius / 1.85, 0, 2 * Math.PI);
+        context.fillStyle = '#FFF';
+        context.fill();
+      } else { // switch to green
+        // decimal 0.0 - 1 for percentage
         var pct = arcStart + (value * 360);
-        //fill percentage arc
+        // fill percentage arc
         context.beginPath();
         context.moveTo(center.x, center.y);
-        context.arc(center.x, center.y, radius, 
-                    getRadians(arcStart), getRadians(pct), false);
+        context.arc(center.x, center.y, radius, getRadians(arcStart), getRadians(pct), false);
         context.closePath();
         context.fillStyle = '#2CB34A';
-        context.fill();  
+        context.fill();
         //center circle
         context.beginPath();
-        context.arc(center.x,center.y,radius/1.85,0,2*Math.PI);
+        context.arc(center.x, center.y, radius / 1.85, 0, 2 * Math.PI);
         context.fillStyle = '#ADDC91';
         context.fill();
         //check mark
-        var unit = (radius - (4 * multiplier))/5;
+        var unit = ( radius - (4 * multiplier) ) / 5;
         context.beginPath();
         context.moveTo(center.x - unit, center.y);
-        context.lineTo(center.x - unit/2, center.y + unit);
-        context.lineWidth = 6 * (radius/100) * multiplier;
-        context.strokeStyle = '#fff';
+        context.lineTo(center.x - unit / 2, center.y + unit);
+        context.lineWidth = 6 * (radius / 100) * multiplier;
+        context.strokeStyle = '#FFF';
         context.lineCap = 'round';
         context.stroke();
         context.beginPath();
-        context.moveTo(center.x - unit/2, center.y + unit);
+        context.moveTo(center.x - unit / 2, center.y + unit);
         context.lineTo(center.x + unit, center.y - unit);
         context.stroke();
       }
     }
 
+
     // ------------------------------------------------
     // Events
     // ------------------------------------------------
+
     $( window ).resize(function() {
-
       //reset after resize (just in case)
-      waitForFinalEvent(function() {
-
-      });
-    
+      waitForFinalEvent();
     });
 
 
@@ -330,17 +324,17 @@
     // ------------------------------------------------
 
     function getRadians(degrees) {
-      return degrees*Math.PI/180;
+      return degrees * Math.PI / 180;
     }
 
     function easeInOutQuint(currentIteration, startValue, changeInValue, totalIterations) {
-      if ((currentIteration /= totalIterations / 2) < 1) {
+      if ( (currentIteration /= totalIterations / 2) < 1) {
         return changeInValue / 2 * Math.pow(currentIteration, 5) + startValue;
       }
       return changeInValue / 2 * (Math.pow(currentIteration - 2, 5) + 2) + startValue;
     }
 
-    //wait for timer
+    // wait for timer
     var waitForFinalEvent = (function () {
       var timers = {};
       return function (callback, ms, uniqueId) {
@@ -348,7 +342,7 @@
           uniqueId = "Don't call this twice without a uniqueId";
         }
         if (timers[uniqueId]) {
-          clearTimeout (timers[uniqueId]);
+          clearTimeout(timers[uniqueId]);
         }
         timers[uniqueId] = setTimeout(callback, ms);
       };
