Rename Watchroom to Top Stories in templates

--- a/newsroom/top-stories.html
+++ b/newsroom/top-stories.html
@@ -1,10 +1,10 @@
-{% for post in watchroom %}
+{% for post in top_stories %}
 
-    <article class="watchroom summary">
+    <article class="top-stories summary">
         <div class="fancy-slug">
             <span class="fancy-slug_text">
                 <span class="fancy-slug_ribbon-left"></span>
-                Watchroom
+                Top Stories
                 <span class="fancy-slug_ribbon-right"></span>
             </span>
         </div>
