Watchroom name change redux

--- a/newsroom/featured-topic.html
+++ b/newsroom/featured-topic.html
@@ -1,10 +1,10 @@
-{% for post in top_stories %}
+{% for post in featured_topic %}
 
-    <article class="top-stories summary">
+    <article class="featured-topic summary">
         <div class="fancy-slug">
             <span class="fancy-slug_text">
                 <span class="fancy-slug_ribbon-left"></span>
-                Top Stories
+                Featured Topic
                 <span class="fancy-slug_ribbon-right"></span>
             </span>
         </div>
